--- a/src/panhandler/templates/panhandler/validation-results.html
+++ b/src/panhandler/templates/panhandler/validation-results.html
@@ -31,7 +31,7 @@
                     <tr>
                         <th scope="row">{{ forloop.counter }}</th>
                         <td>
-                            <a href="{{ r.results.documentation_link }}">
+                            <a href="{{ r.results.documentation_link }}" target="_blank">
                                 {{ r.results.label }}
                             </a>
                         </td>
