update to skilletlib 0.7.2 for #106

--- a/src/panhandler/templates/panhandler/validation-results.html
+++ b/src/panhandler/templates/panhandler/validation-results.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="card border-primary mb-5 shadow-lg">
         <div class="card-header">
-            {{ view.get_header }}
+            {{ header }}
         </div>
         <div class="card-body">
             <h4 class="card-title">
@@ -101,5 +101,4 @@
             </div>
         </div>
     {% endfor %}
-    {{ results }}
 {% endblock %}
