fix for FR #117 sort metadata files by label

--- a/src/panhandler/templates/panhandler/repo_detail.html
+++ b/src/panhandler/templates/panhandler/repo_detail.html
@@ -92,7 +92,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for s in snippets %}
+                {% for s in snippets|dictsort:"label" %}
                     <tr>
                         <th scope="row">{{ forloop.counter }}</th>
                         <td>
