--- a/src/panhandler/templates/panhandler/validation-results.html
+++ b/src/panhandler/templates/panhandler/validation-results.html
@@ -86,7 +86,9 @@
                 </tbody>
             </table>
             </p>
-            <div class="card-footer text-right">
+
+        </div>
+                <div class="card-footer text-right">
                 <p class="card-text">
                     {% if request.session.next_step %}
                         {% if request.session.last_step %}
@@ -99,7 +101,6 @@
                     {% endif %}
                 </p>
             </div>
-        </div>
     </div>
     <div class="modal fade" id="test_modal" tabinex="-1" role="dialog"
          aria-labelledby="{{ r.results.label }}" aria-hidden="true">
@@ -113,7 +114,7 @@
             </div>
         </div>
     </div>
-    <div class="text-white mt-5">{{ results }}</div>
+{#    <div class="text-white mt-5">{{ results }}</div>#}
 {% endblock %}
 
 
