--- a/src/panhandler/templates/panhandler/welcome.html
+++ b/src/panhandler/templates/panhandler/welcome.html
@@ -7,9 +7,14 @@
         {{ title }}
     </h1>
     <p class="lead">
-        Panhandler is a tool for sharing PAN-OS configurations and configuration sets. These configs are stored and
-        shared via Git repositories. In addition to PAN-OS, Panhandler can also consume other types of repositories,
-        such as Terraform templates, or generic network device configuration templates.
+        Panhandler is a tool for sharing PAN-OS configurations and configuration sets called Skillets.
+        These configs are stored and shared via <a href="https://github.com/topics/skillets">Git repositories</a>.
+        In addition to PAN-OS, Panhandler can also manage other types of Skillets,
+        such as Terraform templates, REST APIs, or generic network device configuration templates.
+    </p>
+    <p class="lead">
+        To find out more about Skillets or discover new Skillets, see the live community page
+        <a href="https://live.paloaltonetworks.com/t5/Skillets/ct-p/Skillets">here</a>.
     </p>
     <p class="lead">
         {% if documentation_link %}
