--- a/src/panhandler/templates/panhandler/repo_detail.html
+++ b/src/panhandler/templates/panhandler/repo_detail.html
@@ -110,6 +110,10 @@
                             <a href="/panhandler/edit_skillet/{{ repo_detail.name }}/{{ s.name }}" class="d-inline">
                                 <i class="fas fa-edit text-muted"></i>
                             </a>
+                            &nbsp;
+                            <a href="/panhandler/favorite_skillet/{{ s.name }}" class="d-inline">
+                                <i class="fas fa-heart text-muted"></i>
+                            </a>
                         </td>
                         <td>{{ s.description }}</td>
                     </tr>
