--- a/src/panhandler/templates/panhandler/favorite.html
+++ b/src/panhandler/templates/panhandler/favorite.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 
-    <h3 class="mb-4"><a href="/panhandler/collections" class="text-dark">Collections</a> -> {{ collection }}</h3>
+    <h3 class="mb-4"><a href="/panhandler/favorites" class="text-dark">Favorites</a> -> {{ collection }}</h3>
 
     <div class="d-flex justify-content-between">
         <div>
